# GraphaFold

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  install.sh  model.py  model_v4.pth  predict.sh  pyproject.toml  requirements.txt  results.csv  run.sh  script.py  visualization.r
configs/: config.yml
examples/: example.dot
examples/amt/: 3OWZ.amt  3V7E.amt  4L81.amt  4P9R.amt  4XW7.amt  5DI4.amt  5K7C.amt  5KPY.amt  5LYS.amt  5T5A.amt  6JQ5.amt  6POM.amt  6TB7.amt  6Y0Y.amt  7BG9.amt  7ELP.amt  7EOJ.amt  7MLX.amt  7V9E.amt  8GXC.amt  8HB8.amt
examples/cmt/: 3MEI.cmt  3OWZ.cmt  3P59.cmt  3V7E.cmt  4GXY.cmt  4L81.cmt  4LCK.cmt  4P9R.cmt  4QLM.cmt  4XW7.cmt  5DDO.cmt  5DI4.cmt  5K7C.cmt  5KPY.cmt  5LYS.cmt  5NWQ.cmt  5T5A.cmt  5TPY.cmt  5Y85.cmt  6E8U.cmt  6JQ5.cmt  6OL3.cmt  6P2H.cmt  6PMO.cmt  6POM.cmt  6TB7.cmt  6UFM.cmt  6Y0Y.cmt  7BG9.cmt  7ELP.cmt  7EOJ.cmt  7MLX.cmt  7QR3.cmt  7QR4.cmt  7V9E.cmt  8DP3.cmt  8GXC.cmt  8HB8.cmt
examples/idx/: 3MEI.idx  3OWZ.idx  3P59.idx  3V7E.idx  4GXY.idx  4L81.idx  4LCK.idx  4P9R.idx  4QLM.idx  4XW7.idx  5DDO.idx  5DI4.idx  5K7C.idx  5KPY.idx  5LYS.idx  5NWQ.idx  5T5A.idx  5TPY.idx  5Y85.idx  6E8U.idx  6JQ5.idx  6OL3.idx  6P2H.idx  6PMO.idx  6POM.idx  6TB7.idx  6UFM.idx  6Y0Y.idx  7BG9.idx  7ELP.idx  7EOJ.idx  7MLX.idx  7QR3.idx  7QR4.idx  7V9E.idx  8DP3.idx  8GXC.idx  8HB8.idx
helix_outputs/: 3OWZ.amt.helix  3V7E.amt.helix  4L81.amt.helix  4P9R.amt.helix  4XW7.amt.helix  5DI4.amt.helix  5K7C.amt.helix  5KPY.amt.helix  5LYS.amt.helix  5T5A.amt.helix  6JQ5.amt.helix  6POM.amt.helix  6TB7.amt.helix  6Y0Y.amt.helix  7BG9.amt.helix  7ELP.amt.helix  7EOJ.amt.helix  7MLX.amt.helix  7V9E.amt.helix  8GXC.amt.helix  8HB8.amt.helix
scripts/: eval_samples.py  preprocess.py
src/graphafold/: const.py  predict.py  script.py  train.py
src/graphafold/data/: __init__.py  dataset.py  sample.py  train_dataset.py  utils.py
src/graphafold/dataset/: __init__.py  dataset.py
src/graphafold/model/: __init__.py  gnn_component.py  model.py
src/graphafold/utils/: __init__.py  utils.py
tests/: test_data_utils.py  test_dataset.py  test_utils.py
tests/data/: 5LZD_1_y_y_7_C.amt  5LZD_1_y_y_7_C.idx  test.idx
tests/dataset_data/: 1A9N_1_Q_Q_4_G.pkl  1A9N_1_Q_Q_5_U.pkl  1A9N_1_Q_Q_6_A.pkl  1A9N_1_Q_Q_7_U.pkl
