[project]
name = "graphafold"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pydantic>=2.11.4",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
    "torch==2.3.0",
    "torchaudio>=2.3.0",
    "torchvision>=0.18.0",
]

[build-system]
requires = ["setuptools>=67.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
graphafold = "graphafold.predict:main"
